Done with Fundamental CSS

--- a/Cash-Calculator/index.html
+++ b/Cash-Calculator/index.html
@@ -10,8 +10,8 @@
     
     <div class="container">
         
-        <h2>Cash Calculator</h2>
-
+        <h2 class="header">Cash Calculator</h2>
+        <div class="row-head">
         <div class="row">
         <img src="./images/two_thousand_note.png">
 
@@ -92,12 +92,13 @@
         <input type="number" id="et1" class="cash-input" placeholder="Enter the amount of 1 notes">
         <span id="text1" class="cash-text">0</span>
     </div>
+</div>
 
     <div class="row">
         <button id="rstbtn">Reset</button>
     </div>
 
-    <div class="row-result">
+    <div class="row row-result">
         <span id="finalresult">Total Cash:0</span>
         <span id="finalresultinwords">Zero</span>
     </div>
