--- a/Note-Taking-Application/index.html
+++ b/Note-Taking-Application/index.html
@@ -15,13 +15,14 @@
 
     <div id="main">
 
-        <div class="note">
+        <!-- <div class="note">
             <div class="tool">
+                <span id = "span">Note</span>
                 <i class="fa fa-save"></i>
                 <i class="fa fa-trash"></i>
             </div>
             <textarea></textarea>
-        </div>
+        </div> -->
     </div>
 
 
