--- a/Dictionary-Application/index.html
+++ b/Dictionary-Application/index.html
@@ -20,7 +20,7 @@
             <button id="searchButton">Search</button> 
         </div>
 
-        <div class="resultContainer" id="result-container">
+        <div class="resultContainer" id="resultContainer">
 
             <h2 id="wordTitle">Content</h2>
             <div id="wordDescription">Content</div>
