--- a/MouseWheel-Zoom-In-Out-Application/index.html
+++ b/MouseWheel-Zoom-In-Out-Application/index.html
@@ -11,5 +11,7 @@
     <div class="container">
         <h1>Use Your Keyboard Pad to Zoom In and Out</h1>
     </div>
+
+    <script src="script.js"></script>
 </body>
 </html>
